:sparkles:기능구현완료

--- a/src/style.css
+++ b/src/style.css
@@ -10,12 +10,27 @@ body {
 
 header {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 
   width: 100%;
   height: 100px;
+  padding: 0 30px;
   background-color: #c2c2af;
+}
+
+header h1 {
+  font-size: 40px;
+  color: #252525;
+  cursor: pointer;
+}
+
+header div {
+  width: 50px;
+  height: 50px;
+  border: #252525 solid 2px;
+  border-radius: 50%;
+  cursor: pointer;
 }
 
 .search {
@@ -48,10 +63,11 @@ header {
   padding: 5px 10px;
   border: none;
   border-radius: 10px;
+  cursor: pointer;
 }
 
 section {
-  background-color: #F6F5E8;
+  background-color: #f6f5e8;
 }
 
 .card-list {
@@ -71,7 +87,7 @@ section {
   background-color: bisque;
   border-radius: 10px;
   cursor: pointer;
-  user-select: none; 
+  user-select: none;
 }
 
 .content-container {
@@ -86,9 +102,39 @@ section {
 }
 
 .movie-title {
-  margin:15px 0;
+  margin: 15px 0;
 }
 
 .movie-title h3 {
   margin-bottom: 100px;
+}
+
+.up-btn {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  border: none;
+  padding: 15px 18px;
+  border-radius: 50%;
+  cursor: pointer;
+  background-color: #252525;
+  color: white;
+}
+
+@media screen and (max-width: 992px) {
+  .card-list {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .card-list {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .card-list {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
