--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   letter-spacing: -0.02em;
 }
 
@@ -79,7 +79,9 @@ section {
 .movie-card {
   display: flex;
   flex-direction: column;
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.12), 0 3px 6px rgba(0, 0, 0, 0.24);
+  box-shadow:
+    0 3px 6px rgba(0, 0, 0, 0.12),
+    0 3px 6px rgba(0, 0, 0, 0.24);
   margin: 20px;
   padding: 20px;
   width: 300px;
