--- a/src/css/sub.css
+++ b/src/css/sub.css
@@ -204,8 +204,10 @@
 .show {
   display: block;
 }
-.review-title {
+.review_title_cont {
   position: relative;
+}
+.review-title {
   margin-bottom: 10px;
   font-size: 20px;
   font-weight: 700;
@@ -213,7 +215,8 @@
 }
 .review_btn {
   position: absolute;
-  left: 900px;
+  right: 15px;
+  top: -4px;
   border: none;
   border-radius: 4px;
   background-color: #f82f62;
@@ -222,32 +225,80 @@
   color: #fff;
 }
 .black-bg {
-  display: none; /* 초기 상태에서는 보이지 않도록 설정 */
+  display: none;
   width: 100%;
   height: 100%;
   position: fixed;
   top: 0;
   left: 0;
-  background: rgba(0, 0, 0, 0.7); /* 검은색 반투명 배경 */
-  z-index: 1000; /* 화면의 다른 요소들보다 위에 위치하도록 z-index 설정 */
+  background: rgba(0, 0, 0, 0.7);
+  z-index: 1000;
   padding: 30px;
 }
 
 .white-bg {
-  position: relative; /* 부모 요소인 .black-bg 내에서 정렬 */
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 30vw;
   height: 60vh;
-  margin: auto; /* 중앙 정렬 */
-  top: 50%; /* 상위 요소의 중간 위치 */
-  transform: translateY(-50%); /* Y축 기준 중앙 정렬 */
-  background-color: white; /* 흰색 배경 */
+  margin: auto;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: white;
   padding: 20px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* 그림자 효과 추가 */
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+}
+.white-bg form {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.white-bg form label {
+  font-size: 15px;
+  font-weight: 700;
+  color: #1b1c1d;
+}
+.white-bg form label,
+input {
+  padding-top: 5px;
+  margin: 5px 0;
+}
+.white-bg form input {
+  padding: 5px 5px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+.white-bg form textarea {
+  height: 30vh;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  resize: none;
+}
+#saveBtn,
+#cancelBtn {
+  margin-top: 10px;
+  padding: 10px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+#saveBtn {
+  background-color: #f82f62;
+  color: white;
+  font-size: 15px;
+}
+.white-bg h2 {
+  font-size: 20px;
+  font-weight: 700;
 }
 
-.modal h2 {
-  text-align: center;
-  margin: 10px;
+.white-bg h2,
+label {
+  color: #000;
 }
 
 .modal-content {
@@ -260,6 +311,8 @@
 }
 
 .review-list {
+  display: flex;
+  justify-content: space-between;
   padding: 10px;
   height: 10vh;
   overflow: auto;
@@ -274,11 +327,54 @@
 }
 
 .review-content {
+  width: 40vw;
   color: rgb(132, 134, 141);
   font-size: 15px;
   font-weight: 400;
   letter-spacing: 0px;
   line-height: 20px;
-  white-space: pre-wrap;
   margin: 4px 0px;
+}
+
+.review-edit-btn,
+.review-delete-btn {
+  cursor: pointer;
+  background-size: 14px 14px;
+  background-repeat: no-repeat;
+  background-position: left center;
+  padding-left: 24px;
+  border: none;
+  background-color: transparent;
+  height: 20px;
+  line-height: 20px;
+  color: rgb(255, 255, 255);
+  filter: brightness(0) invert(1);
+}
+
+.review-edit-btn {
+  background-image: url('../asset/pencil-fill.svg');
+}
+
+.review-delete-btn {
+  background-image: url('../asset/trash-fill.svg');
+}
+
+.review-button-div {
+  margin-top: 40px;
+}
+
+.review-content-cont {
+  margin-top: 20px;
+}
+
+.review-list input {
+  width: 100px;
+  height: 20px;
+  margin-top: 40px;
+}
+
+.confirm-btn {
+  width: 70px;
+  height: 30px;
+  margin-top: 40px;
 }
