--- a/src/css/style.css
+++ b/src/css/style.css
@@ -22,7 +22,7 @@ header {
 header h1 {
   font-size: 28px;
   font-weight: 700;
-  color: #FFFFFF;
+  color: #ffffff;
   margin: 0 0 13px;
   letter-spacing: 0px;
   line-height: 34px;
@@ -35,34 +35,32 @@ header h1 {
   border-radius: 50%;
   cursor: pointer;
 }*/
-
-.search {
+.search-container {
   width: 100%;
-  height: 100px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
   padding: 20px 0;
   background-color: black;
-  border-bottom: 0.1px solid white;
+}
+.search-container .search {
+  position: relative;
+  width: 300px;
+  height: 100%;
+  margin: 10px auto 20px;
 }
 
-.search label {
-  font-size: 25px;
-  color: white;
-}
-
-.search input {
-  margin-left: 5px;
-  min-width: 200px;
-  padding: 5px 10px;
+.search-container .search input {
+  min-width: 300px;
+  padding: 10px 30px 10px 34px;
+  border-radius: 4px;
+  background-color: #444;
+  font-size: 15px;
+  color: #fff;
   border: none;
-  border-radius: 14px;
-
+  outline: none;
 }
-
-.search button {
+.search-container .search input::placeholder {
+  color: #bbb;
+}
+/* .search-container .search button {
     margin-left: 5px;
     display: inline-block;
     position: relative;
@@ -80,16 +78,31 @@ header h1 {
     border-style: solid;
     border-color: #f82f62;
     border-radius: 24px;
+} */
+.search-container .search button {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
 }
-
+.search-container .search #search-btn {
+  left: 7px;
+}
+.search-container .search #reset-btn {
+  right: 7px;
+}
 section {
   background-color: #000;
 }
 
 .card-list {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(6, 1fr);
   justify-content: center;
+  border-top: 1px #1b1c1d solid;
 }
 
 .movie-card {
@@ -99,20 +112,11 @@ section {
     0 3px 6px rgba(0, 0, 0, 0.12),
     0 3px 6px rgba(0, 0, 0, 0.24);
   margin: 20px;
-  padding: 20px;
-  width: 300px;
   justify-self: center;
-  background-color: white;
+  background-color: #000;
   border-radius: 10px;
   cursor: pointer;
   user-select: none;
-}
-
-.content-container {
-  flex-grow: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
 }
 .movie-card img {
   width: 100%;
@@ -120,11 +124,14 @@ section {
 }
 
 .movie-title {
-  margin: 15px 0;
+  margin-top: 10px;
+  color: #fff;
 }
 
-.movie-title h3 {
-  margin-bottom: 100px;
+.movie-rating {
+  display: inline-block;
+  margin-top: 5px;
+  color: #babac1;
 }
 
 .up-btn {
@@ -146,7 +153,11 @@ body {
 
 body {
   background: #eee;
-  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-family:
+    Helvetica Neue,
+    Helvetica,
+    Arial,
+    sans-serif;
   font-size: 14px;
   color: #000;
   margin: 0;
@@ -197,6 +208,16 @@ body {
   font-size: 13px;
 }
 
+@media screen and (max-width: 1400px) {
+  .card-list {
+    grid-template-columns: repeat(5, 1fr);
+  }
+}
+@media screen and (max-width: 1200px) {
+  .card-list {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
 @media screen and (max-width: 992px) {
   .card-list {
     grid-template-columns: repeat(3, 1fr);
