--- a/src/css/style.css
+++ b/src/css/style.css
@@ -29,7 +29,7 @@ header {
 header h1 {
   font-size: 28px;
   font-weight: 700;
-  color: #ffffff;
+  color: #FFFFFF;
   margin: 0 0 13px;
   letter-spacing: 0px;
   line-height: 34px;
@@ -42,7 +42,8 @@ header h1 {
   border-radius: 50%;
   cursor: pointer;
 }*/
-.search-container {
+
+.search {
   width: 100%;
   height: 100px;
   display: flex;
@@ -53,83 +54,72 @@ header h1 {
   background-color: black;
   border-bottom: 0.1px solid white;
 }
-.search-container .search {
-  position: relative;
-  width: 300px;
-  height: 100%;
-  margin: 10px auto 20px;
+
+.search label {
+  font-size: 25px;
+  color: white;
 }
 
-.search-container .search input {
-  min-width: 300px;
-  padding: 10px 30px 10px 34px;
-  border-radius: 4px;
-  background-color: #444;
-  font-size: 15px;
-  color: #fff;
+.search input {
+  margin-left: 5px;
+  min-width: 200px;
+  padding: 5px 10px;
   border: none;
-  outline: none;
+  border-radius: 14px;
+
 }
-.search-container .search input::placeholder {
-  color: #bbb;
+
+.search button {
+  margin-left: 5px;
+  display: inline-block;
+  position: relative;
+  white-space: nowrap;
+  background: #f82f62;
+  color: #fff !important;
+  font-size: 14px;
+  font-weight: 500;
+  letter-spacing: 0px;
+  -webkit-text-decoration: none;
+  text-decoration: none;
+  line-height: 20px;
+  padding: 8px 16px;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #f82f62;
+  border-radius: 24px;
 }
-/* .search-container .search button {
-    margin-left: 5px;
-    display: inline-block;
-    position: relative;
-    white-space: nowrap;
-    background: #f82f62;
-    color: #fff !important;
-    font-size: 14px;
-    font-weight: 500;
-    letter-spacing: 0px;
-    -webkit-text-decoration: none;
-    text-decoration: none;
-    line-height: 20px;
-    padding: 8px 16px;
-    border-width: 1px;
-    border-style: solid;
-    border-color: #f82f62;
-    border-radius: 24px;
-} */
-.search-container .search button {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  padding: 0;
-  border: none;
-  background-color: transparent;
-  cursor: pointer;
-}
-.search-container .search #search-btn {
-  left: 7px;
-}
-.search-container .search #reset-btn {
-  right: 7px;
-}
+
 section {
   background-color: #000;
 }
 
 .card-list {
   display: grid;
-  grid-template-columns: repeat(6, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   justify-content: center;
-  border-top: 1px #1b1c1d solid;
 }
 
 .movie-card {
   display: flex;
   flex-direction: column;
   box-shadow:
-    0 3px 6px rgba(0, 0, 0, 0.12),
-    0 3px 6px rgba(0, 0, 0, 0.24);
+          0 3px 6px rgba(0, 0, 0, 0.12),
+          0 3px 6px rgba(0, 0, 0, 0.24);
   margin: 20px;
+  padding: 20px;
+  width: 300px;
   justify-self: center;
-  background-color: #000;
+  background-color: white;
   border-radius: 10px;
   cursor: pointer;
   user-select: none;
+}
+
+.content-container {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 .movie-card img {
   width: 100%;
@@ -137,91 +127,76 @@ section {
 }
 
 .movie-title {
-  margin-top: 10px;
-  color: #fff;
+  margin: 15px 0;
 }
 
-.movie-rating {
-  display: inline-block;
-  margin-top: 5px;
-  color: #babac1;
+.movie-title h3 {
+  margin-bottom: 100px;
 }
 
 .up-btn {
   position: fixed;
-  bottom: 20px;
+  bottom: 25px;
   right: 20px;
   border: none;
-  padding: 15px 18px;
   border-radius: 50%;
   cursor: pointer;
-  background-color: #252525;
+  background-color: #f82f62;
   color: white;
 }
 
-    .swiper-slide {
-      text-align: center;
-      font-size: 18px;
-      background: #fff;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: fit-content !important;
-    }
-
-    .swiper-slide img {
-      display: block;
-      width: 600px;
-      height: 100%;
-      object-fit: cover;
-      border-radius: 30px;
-    }
-
-    .swiper {
-      width: 100%;
-      height: 300px;
-      margin: 20px auto;
-    }
-
-    .append-buttons {
-      text-align: center;
-      margin-top: 20px;
-    }
-
-    .append-buttons button {
-      display: inline-block;
-      cursor: pointer;
-      border: 1px solid #007aff;
-      color: #007aff;
-      text-decoration: none;
-      padding: 4px 10px;
-      border-radius: 4px;
-      margin: 0 10px;
-      font-size: 13px;
-    }
-
-    .swiper-slide img.sub {
-      display: block;
-      width: 300px;
-      height: 100%;
-      object-fit: cover;
-      border-radius: 30px;
-    }
-
-    .divider{
-      padding: 20px 0 20px 0;
-      background-color: #000;
-    }
-
-@media screen and (max-width: 1400px) {
-  .card-list {
-    grid-template-columns: repeat(5, 1fr);
-  }
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: fit-content !important;
 }
-@media screen and (max-width: 1200px) {
-  .card-list {
-    grid-template-columns: repeat(4, 1fr);
-  }
+
+.swiper-slide img {
+  display: block;
+  width: 600px;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 30px;
+}
+
+.swiper {
+  width: 100%;
+  height: 300px;
+  margin: 20px auto;
+}
+
+.append-buttons {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.append-buttons button {
+  display: inline-block;
+  cursor: pointer;
+  border: 1px solid #007aff;
+  color: #007aff;
+  text-decoration: none;
+  padding: 4px 10px;
+  border-radius: 4px;
+  margin: 0 10px;
+  font-size: 13px;
+}
+
+.swiper-slide img.sub {
+  display: block;
+  width: 300px;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 30px;
+}
+
+.divider{
+  padding: 20px 0 20px 0;
+  background-color: #000;
 }
 
 @media screen and (max-width: 992px) {
