--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,11 +4,12 @@
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
-  letter-spacing: -0.02em;
-  position: relative;
-  height: 100%;
-  background: white;
+  background: #eee;
+  font-family:
+          Helvetica Neue,
+          Helvetica,
+          Arial,
+          sans-serif;
   font-size: 14px;
   color: #000;
   margin: 0;
@@ -42,51 +43,66 @@ header h1 {
   border-radius: 50%;
   cursor: pointer;
 }*/
-
-.search {
+.search-container {
   width: 100%;
-  height: 100px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
   padding: 20px 0;
   background-color: black;
-  border-bottom: 0.1px solid white;
 }
-
-.search label {
-  font-size: 25px;
-  color: white;
-}
-
-.search input {
-  margin-left: 5px;
-  min-width: 200px;
-  padding: 5px 10px;
-  border: none;
-  border-radius: 14px;
-
-}
-
-.search button {
-  margin-left: 5px;
-  display: inline-block;
+.search-container .search {
   position: relative;
-  white-space: nowrap;
-  background: #f82f62;
-  color: #fff !important;
-  font-size: 14px;
-  font-weight: 500;
-  letter-spacing: 0px;
-  -webkit-text-decoration: none;
-  text-decoration: none;
-  line-height: 20px;
-  padding: 8px 16px;
-  border-width: 1px;
-  border-style: solid;
-  border-color: #f82f62;
-  border-radius: 24px;
+  width: 300px;
+  height: 100%;
+  margin: 10px auto 20px;
+}
+
+.search-container .search input {
+  min-width: 300px;
+  padding: 10px 30px 10px 34px;
+  border-radius: 4px;
+  background-color: #444;
+  font-size: 15px;
+  color: #fff;
+  border: none;
+  outline: none;
+}
+.search-container .search input::placeholder {
+  color: #bbb;
+}
+
+/* .search-container .search button {
+    margin-left: 5px;
+    display: inline-block;
+    position: relative;
+    white-space: nowrap;
+    background: #f82f62;
+    color: #fff !important;
+    font-size: 14px;
+    font-weight: 500;
+    letter-spacing: 0px;
+    -webkit-text-decoration: none;
+    text-decoration: none;
+    line-height: 20px;
+    padding: 8px 16px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: #f82f62;
+    border-radius: 24px;
+} */
+
+.search-container .search button {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+.search-container .search #search-btn {
+  left: 7px;
+}
+.search-container .search #reset-btn {
+  right: 7px;
 }
 
 section {
@@ -95,8 +111,9 @@ section {
 
 .card-list {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(6, 1fr);
   justify-content: center;
+  border-top: 1px #1b1c1d solid;
 }
 
 .movie-card {
@@ -127,11 +144,14 @@ section {
 }
 
 .movie-title {
-  margin: 15px 0;
+  margin-top: 10px;
+  color: #fff;
 }
 
-.movie-title h3 {
-  margin-bottom: 100px;
+.movie-rating {
+  display: inline-block;
+  margin-top: 5px;
+  color: #babac1;
 }
 
 .up-btn {
@@ -197,6 +217,17 @@ section {
 .divider{
   padding: 20px 0 20px 0;
   background-color: #000;
+}
+
+@media screen and (max-width: 1400px) {
+  .card-list {
+    grid-template-columns: repeat(5, 1fr);
+  }
+}
+@media screen and (max-width: 1200px) {
+  .card-list {
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
 
 @media screen and (max-width: 992px) {
