--- a/src/css/style.css
+++ b/src/css/style.css
@@ -160,8 +160,8 @@ section {
 
 .movie-top-10 {
   position: fixed;
-  bottom: 30px;
-  right: 590px;
+  bottom: -5px;
+  right: 394px;
   padding-left: 50px;
 }
 
@@ -196,8 +196,8 @@ section {
 
 .swiper-slide img {
   display: block;
-  width: 600px;
-  height: 100%;
+  width: 398px;
+  height: 569px;
   object-fit: inherit;
   /*object-fit: cover;*/
   /*border-radius: 30px;*/
@@ -205,7 +205,7 @@ section {
 
 .swiper {
   width: 100%;
-  height: 300px;
+  /*height: 300px;*/
   margin: 20px auto;
 }
 
@@ -229,7 +229,7 @@ section {
 .swiper-slide img.sub {
   display: block;
   width: 300px;
-  height: 100%;
+  height: 427px;
   object-fit: inherit;
   /*object-fit: cover;*/
   /*border-radius: 30px;*/
