Design: 무비리스트 hover 적용 및 swiper 옵션 조정

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -319,3 +319,14 @@ section {
   margin-top: 10px;
   margin-right: 10px;
 }
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
