--- a/src/css/style.css
+++ b/src/css/style.css
@@ -54,38 +54,19 @@ body {
 
 .search-container .search input {
   min-width: 300px;
-  padding: 10px 30px 10px 34px;
+  padding: 10px 34px 10px;
   border-radius: 4px;
-  background-color: #444;
+  background-color: #fff;
   font-size: 15px;
-  color: #fff;
+  color: #000;
   border: none;
   outline: none;
 }
 
 .search-container .search input::placeholder {
-  color: #bbb;
+  color: #5f6368;
 }
 
-/* .search-container .search button {
-    margin-left: 5px;
-    display: inline-block;
-    position: relative;
-    white-space: nowrap;
-    background: #f82f62;
-    color: #fff !important;
-    font-size: 14px;
-    font-weight: 500;
-    letter-spacing: 0px;
-    -webkit-text-decoration: none;
-    text-decoration: none;
-    line-height: 20px;
-    padding: 8px 16px;
-    border-width: 1px;
-    border-style: solid;
-    border-color: #f82f62;
-    border-radius: 24px;
-} */
 .search-container .search button {
   position: absolute;
   top: 50%;
@@ -110,7 +91,7 @@ section {
 
 .card-list {
   display: grid;
-  grid-template-columns: repeat(6, 1fr);
+  grid-template-columns: repeat(5, 1fr);
   justify-content: center;
   border-top: 1px #1b1c1d solid;
 }
@@ -129,8 +110,9 @@ section {
   user-select: none;
 }
 
-.movie-card img {
+.movie-poster {
   width: 100%;
+  height: 310px;
   border-radius: 10px;
 }
 
@@ -238,36 +220,6 @@ section {
 .divider {
   padding: 20px 0 20px 0;
   background-color: #000;
-}
-
-@media screen and (max-width: 1400px) {
-  .card-list {
-    grid-template-columns: repeat(5, 1fr);
-  }
-}
-
-@media screen and (max-width: 1200px) {
-  .card-list {
-    grid-template-columns: repeat(4, 1fr);
-  }
-}
-
-@media screen and (max-width: 992px) {
-  .card-list {
-    grid-template-columns: repeat(3, 1fr);
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .card-list {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-@media screen and (max-width: 576px) {
-  .card-list {
-    grid-template-columns: repeat(1, 1fr);
-  }
 }
 
 /* footer */
