--- a/src/css/response.css
+++ b/src/css/response.css
@@ -31,6 +31,9 @@
     width: 350px;
     height: 205px;
   }
+  .white-bg {
+    width: 40vw;
+  }
 }
 @media screen and (max-width: 1024px) {
   .card-list {
@@ -94,6 +97,9 @@
   .review-content {
     width: 100%;
   }
+  .white-bg {
+    width: 45vw;
+  }
 }
 @media screen and (max-width: 550px) {
   .card-list {
@@ -104,5 +110,8 @@
   }
   .sub_page {
     padding: 0 20px 40px;
+  }
+  .white-bg {
+    width: 55vw;
   }
 }
