--- a/src/css/sub.css
+++ b/src/css/sub.css
@@ -291,7 +291,6 @@ body {
   left: 0;
   background: rgba(0, 0, 0, 0.7);
   z-index: 1000;
-  padding: 30px;
 }
 
 .white-bg {
@@ -301,9 +300,9 @@ body {
   align-items: center;
   width: 30vw;
   height: 60vh;
-  margin: auto;
   top: 50%;
-  transform: translateY(-50%);
+  left: 50%;
+  transform: translate(-50%, -50%);
   background-color: white;
   padding: 20px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
